<resources>
    <string name="appName">Power Alarm</string>
    <string name="dataProviderName">PAC Data Provider</string>
    <string name="dataServiceName">PAC Data Service</string>
    <string name="alarmServiceName">PAC Service</string>
    <string name="alarmReceiverName">PAC Receiver</string>
    <string name="aboutName">About</string>
    <string name="alarmName">Alarm</string>
    <string name="dismissSnoozedAlarmName">Dismiss Snoozed Alarm</string>
    <string name="helpName">Power Alarm Help</string>
    <string name="titleBarBackButton">Back</string>
    <string name="titleBarAddButton">Add</string>
    <string name="titleBarEditButton">Edit</string>
    <string name="titleBarSaveButton">Save</string>
    <string name="scheduleButton">Schedule</string>
    <string name="alarmRuleButton">Alarm</string>
    <string name="optionsMenuButton">…</string>
    <string name="buttonOK">OK</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonYes">Yes</string>
    <string name="buttonNo">No</string>
    <string name="buttonAdd">Add</string>
    <string name="buttonDelete">Delete</string>
    <string name="buttonDismiss">Dismiss</string>
    <string name="buttonSnooze">Snooze</string>
    <string name="toggleButtonOn">ON</string>
    <string name="toggleButtonOff">OFF</string>
    <string name="menuPreferences">Preferences</string>
    <string name="menuWorkday">Workday</string>
    <string name="menuHelp">Help</string>
    <string name="menuAbout">About</string>
    <string name="contextMenuView">View</string>
    <string name="contextMenuClone">Clone</string>
    <string name="contextMenuDelete">Delete</string>
    <string name="loading">loading…</string>
    <string name="enabled">Enabled</string>
    <string name="openHelpConfirmation">See help now? (You can check it later in menus).</string>
    <string name="saveConfirmation">Save changes?</string>
    <string name="dayMonth_ddmm">%1$s %2$s</string>
    <string name="dayMonth_mmdd">%2$s %1$s</string>
    <string name="dayMonthYear_ddmmyyyy">%1$s %2$s, %3$s</string>
    <string name="dayMonthYear_mmddyyyy">%2$s %1$s, %3$s</string>
    <string name="dayMonthYear_yyyymmdd">%3$s, %2$s %1$s</string>
    <string name="timeAM">%1$s AM</string>
    <string name="timePM">%1$s PM</string>
    <string name="dateTime">%1$s, %2$s</string>
    <string name="dateWeekShort">%1$s, %2$s</string>
    <string name="dateTimeWeek">%1$s, %2$s, %3$s</string>
    <string name="descTimeNoMinute">%1$s o\'clock</string>
    <string name="descTime">%1$s o\'clock %2$s minutes</string>
    <string name="descTimeAM">%1$s, AM</string>
    <string name="descTimePM">%1$s, PM</string>
    <string name="speakAlarmNameText">%1$s. Now it\'s %2$s.</string>
    <string name="timeViewDefaultTime">00:00</string>
    <string name="timeViewAM">AM</string>
    <string name="timeViewPM">PM</string>
    <string name="scheduleNoRecord">No alarm of recent 2 weeks. Go to Alarm to create new one.</string>
    <string name="scheduleNextAlarm">Next Alarm:</string>
    <string name="scheduleNextAlarmIntervalHourMinute">In %1$s hours and %2$s minutes.</string>
    <string name="scheduleNextAlarmIntervalDayHourMinute">In %1$s days, %2$s hours and %3$s minutes.</string>
    <string name="scheduleEnabled">Schedule Enabled</string>
    <string name="scheduleDisabled">Schedule Disabled</string>
    <string name="errScheduleQueryAllFailed">Error: Query all schedules failed!</string>
    <string name="errScheduleUpdateEnabledFailed">Error: Update schedule enabled failed!</string>
    <string name="scheduleDateText">%1$s, %2$s</string>
    <string name="alarmRuleListTitle">Alarm Rule</string>
    <string name="alarmRuleViewTitle">Alarm Detail</string>
    <string name="alarmRuleEditTitle">Edit Alarm</string>
    <string name="alarmRuleNewTitle">New Alarm</string>
    <string name="alarmRuleNoRecord">No Alarm Defined</string>
    <string name="alarmRuleEnabled">Alarm Enabled</string>
    <string name="alarmRuleDisabled">Alarm Disabled</string>
    <string name="alarmRuleNameLabel">Name:</string>
    <string name="alarmRuleNameDefault">Alarm</string>
    <string name="alarmRuleTimeLabel">Time:</string>
    <string name="alarmRuleRepeatRuleLabel">Repeat Rule:</string>
    <string name="alarmRuleNoRepeatRule">One Time</string>
    <string name="alarmRuleDelAfterExpiredLabel">Delete After Expired:</string>
    <string name="alarmRuleDelAfterExpiredTrue">YES</string>
    <string name="alarmRuleDelAfterExpiredFalse">NO</string>
    <string name="alarmRuleComplyWorkdayLabel">Only in Workday:</string>
    <string name="alarmRuleComplyWorkdayTrue">YES</string>
    <string name="alarmRuleComplyWorkdayFalse">NO</string>
    <string name="alarmRuleRingtoneLabel">Ringtone:</string>
    <string name="alarmRuleRingLabel">Ring:</string>
    <string-array name="alarmRuleRing">
        <item>Default</item>
        <item>Ring</item>
        <item>No Ring</item>
    </string-array>
    <string name="alarmRuleVibrateLabel">Vibrate:</string>
    <string-array name="alarmRuleVibrate">
        <item>Default</item>
        <item>Vibrate</item>
        <item>No Vibrate</item>
    </string-array>
    <string name="alarmRuleAlarmTimeLabel">Alarm Time:</string>
    <string-array name="alarmRuleAlarmTimeEntries">
        <item>Default</item>
        <item>Ringtone Length</item>
        <item>10 seconds</item>
        <item>20 seconds</item>
        <item>30 seconds</item>
        <item>1 minutes</item>
        <item>2 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
    </string-array>
    <string-array name="alarmRuleAlarmTimeEntryValues">
        <item>0</item>
        <item>-1</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>300</item>
        <item>600</item>
    </string-array>
    <string-array name="alarmRuleAlarmTimeNoRingtoneEntries">
        <item>Default</item>
        <item>10 seconds</item>
        <item>20 seconds</item>
        <item>30 seconds</item>
        <item>1 minutes</item>
        <item>2 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
    </string-array>
    <string-array name="alarmRuleAlarmTimeNoRingtoneEntryValues">
        <item>0</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>300</item>
        <item>600</item>
    </string-array>
    <string name="alarmRuleAddSuccess">Alarm Added</string>
    <string name="alarmRuleUpdateSuccess">Alarm Updated</string>
    <string name="alarmRuleDeleteSuccess">Alarm Deleted</string>
    <string name="errAlarmRuleQueryAllFailed">Error: Query all alarm failed!</string>
    <string name="errAlarmRuleAddFailed">Error: Add alarm failed!</string>
    <string name="errAlarmRuleDeleteFailed">Error: Delete alarm failed!</string>
    <string name="errAlarmRuleUpdateFailed">Error: Update alarm failed!</string>
    <string name="errAlarmRuleUpdateEnabledFailed">Error: Update alarm enabled failed!</string>
    <string name="errAlarmRuleNoItemToView">Error: No alarm to view!</string>
    <string name="errAlarmRuleNoItemToEdit">Error: No alarm to Edit!</string>
    <string name="workdayListTitle">Workday</string>
    <string name="workdayViewTitle">Workday Detail</string>
    <string name="workdayEditTitle">Edit Workday</string>
    <string name="workdayNewTitle">New Workday</string>
    <string name="workdayNoRecord">No Workday Defined</string>
    <string name="workdayNameLabel">Name:</string>
    <string name="workdayNameDefault">Workday</string>
    <string name="workdayDateRuleLabel">Date Rule:</string>
    <string name="workdayAddSuccess">Workday Added</string>
    <string name="workdayUpdateSuccess">Workday Updated</string>
    <string name="workdayDeleteSuccess">Workday Deleted</string>
    <string name="workdayDefaultName">Default Workday</string>
    <string name="errWorkdayQueryAllFailed">Error: Query all workday failed!</string>
    <string name="errWorkdayAddFailed">Error: Add workday failed!</string>
    <string name="errWorkdayAddFailedLocationUsed">Error: The location is already used!</string>
    <string name="errWorkdayDeleteFailed">Error: Delete workday failed!</string>
    <string name="errWorkdayUpdateFailed">Error: Update workday failed!</string>
    <string name="dateRuleWeekInMonth1"></string>
    <string name="dateRuleWeekInMonth2"></string>
    <string name="dateRuleWeekInMonth3">of every month</string>
    <string name="ringtoneTypePreference">Preference</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="pref_categoryDefaultSetting">Default Alarm Setting</string>
    <string name="pref_ringLabel">Ring</string>
    <string name="pref_ringtoneLabel">Ringtone</string>
    <string name="pref_speakAlarmNameLabel">Say Alarm Name</string>
    <string name="pref_speakAlarmNameYesDesc">Say alarm\'s name and time when alarm rings.</string>
    <string name="pref_speakAlarmNameNoDesc">Don\'t say alarm\'s name when alarm rings.</string>
    <string name="pref_vibrateLabel">Vibrate</string>
    <string name="pref_alarmTimeLabel">Alarm Time</string>
    <string name="pref_snoozeTimeLabel">Snooze Time</string>
    <string name="pref_autoSnoozeTimesLabel">Auto Snooze Times</string>
    <string name="pref_categoryDateTimeFormat">Date Time Format</string>
    <string name="pref_dateFormatLabel">Date Format</string>
    <string name="pref_time24HourFormatLabel">24 Hour Format</string>
    <string name="pref_time24HourFormatYesDesc">Time shown as 17:00.</string>
    <string name="pref_time24HourFormatNoDesc">Time shown as 05:00 PM.</string>
    <string name="pref_firstDaySundayLabel">Sunday is First Day</string>
    <string name="pref_firstDaySundayDesc">Sunday is first day of week.</string>
    <string name="pref_firstDayMondayDesc">Monday is first day of week.</string>
    <string name="pref_categoryDisplay">Display</string>
    <string name="pref_largeSnoozeButtonLabel">Large Snooze Button</string>
    <string name="pref_largeSnoozeButtonYesDesc">Show a very large snooze button when alarm rings.</string>
    <string name="pref_largeSnoozeButtonNoDesc">Show a normal size snooze button when alarm rings.</string>
    <string name="pref_disableButtonInPocketLabel">Disable Button in Pocket</string>
    <string name="pref_disableButtonInPocketYesDesc">Disable alarm button when device in pocket.</string>
    <string name="pref_disableButtonInPocketNoDesc">Don\'t disable alarm button when device in pocket.</string>
    <string name="pref_alarmTimeNotificationLabel">Next Alarm Notification</string>
    <string name="pref_alarmTimeNotificationYesDesc">Show next alarm time in notification bar.</string>
    <string name="pref_alarmTimeNotificationNoDesc">Don\'t show next alarm time in notification bar.</string>
    <string name="pref_popupNotificationLabel">Popup Notification</string>
    <string name="pref_popupNotificationYesDesc">Show popup notifications.</string>
    <string name="pref_popupNotificationNoDesc">Don\'t show popup notifications.</string>
    <string name="pref_showInactiveScheduleLabel">Show Inactive Schedules</string>
    <string name="pref_showInactiveScheduleYesDesc">Show inactive schedules in schedule list.</string>
    <string name="pref_showInactiveScheduleNoDesc">Don\'t show inactive schedules in schedule list.</string>
    <string name="pref_categoryOther">Other</string>
    <string name="pref_streamTypeLabel">Stream Channel</string>
    <string name="pref_ttsStreamTypeLabel">TTS Stream Channel</string>
</resources>