<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        xmlns:app="http://schemas.android.com/apk/res/com.isjfk.android.rac"
        style="@style/mainLinear">

    <LinearLayout style="@style/titleBar" android:id="@+id/titleBar">
        <Button
                style="@style/titleBarButton"
                android:id="@+id/titleBarBackButton"
                android:visibility="visible"
                android:text="@string/titleBarBackButton" />
        <TextView
                style="@style/titleBarText"
                android:id="@+id/titleBarText"
                android:text="@string/alarmRuleEditTitle" />
        <Button
                style="@style/titleBarButton"
                android:id="@+id/titleBarSaveButton"
                android:visibility="visible"
                android:text="@string/titleBarSaveButton" />
    </LinearLayout>

    <ScrollView style="@style/mainContent">
        <LinearLayout style="@style/mainContentLinear">
            <TextView
                    style="@style/contentLabel"
                    android:text="@string/alarmRuleNameLabel" />
            <com.isjfk.android.rac.widget.EditTextDefault
                    style="@style/contentEditText"
                    android:id="@+id/alarmRuleName"
                    android:hint="@string/alarmRuleNameDefault"
                    android:imeOptions="actionDone" />
            <TextView
                    style="@style/contentLabel"
                    android:text="@string/alarmRuleTimeLabel" />
            <TextView
                    style="@style/alarmRuleTime"
                    android:id="@+id/alarmRuleTimeText"
                    android:gravity="center_horizontal" />
            <com.isjfk.android.rac.widget.RACSliderContainer
                    style="@style/contentItem"
                    android:id="@+id/alarmRuleTime"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <com.isjfk.android.rac.widget.RACScrollLayout
                        style="@style/Scroller"
                        app:labelerClass="com.isjfk.android.rac.labeler.HourLabeler"
                        app:labelerFormat="%tH"
                        app:childWidth="90dp" />
                <com.isjfk.android.rac.widget.RACScrollLayout
                        style="@style/Scroller"
                        app:labelerClass="com.isjfk.android.rac.labeler.MinuteLabeler"
                        app:labelerFormat="%tM"
                        app:childWidth="45dp" />
            </com.isjfk.android.rac.widget.RACSliderContainer>
            <TextView
                    style="@style/contentLabel"
                    android:text="@string/alarmRuleRepeatRuleLabel" />
            <com.isjfk.android.rac.widget.DateRuleListEditor
                    style="@style/contentListForEdit"
                    android:id="@+id/dateRuleListEditor" />
            <LinearLayout
                    style="@style/mainContentLinear"
                    android:id="@+id/alarmRuleDelAfterExpiredGroup">
                <TextView
                        style="@style/contentLabel"
                        android:text="@string/alarmRuleDelAfterExpiredLabel" />
                <ToggleButton
                        style="@style/contentItem"
                        android:id="@+id/alarmRuleDelAfterExpired"
                        android:textOn="@string/alarmRuleDelAfterExpiredTrue"
                        android:textOff="@string/alarmRuleDelAfterExpiredFalse" />
            </LinearLayout>
            <LinearLayout
                    style="@style/mainContentLinear"
                    android:id="@+id/alarmRuleComplyWorkdayGroup"
                    android:visibility="gone">
                <TextView
                        style="@style/contentLabel"
                        android:text="@string/alarmRuleComplyWorkdayLabel" />
                <ToggleButton
                        style="@style/contentItem"
                        android:id="@+id/alarmRuleComplyWorkday"
                        android:textOn="@string/alarmRuleComplyWorkdayTrue"
                        android:textOff="@string/alarmRuleComplyWorkdayFalse" />
            </LinearLayout>
            <TextView
                    style="@style/contentLabel"
                    android:text="@string/alarmRuleRingLabel" />
            <Spinner
                    style="@style/contentItem"
                    android:id="@+id/alarmRuleRing"
                    android:entries="@array/alarmRuleRing" />
            <TextView
                    style="@style/contentLabel"
                    android:text="@string/alarmRuleRingtoneLabel" />
            <Button
                    style="@style/contentItem"
                    android:id="@+id/alarmRuleRingtone"
                    android:text="@string/ringtoneTypePreference" />
            <TextView
                    style="@style/contentLabel"
                    android:text="@string/alarmRuleVibrateLabel" />
            <Spinner
                    style="@style/contentItem"
                    android:id="@+id/alarmRuleVibrate"
                    android:entries="@array/alarmRuleVibrate" />
            <TextView
                    style="@style/contentLabel"
                    android:text="@string/alarmRuleAlarmTimeLabel" />
            <Spinner
                    style="@style/contentItem"
                    android:id="@+id/alarmRuleAlarmTime"
                    android:entries="@array/alarmRuleAlarmTimeEntries" />
            <Spinner
                    style="@style/contentItem"
                    android:visibility="gone"
                    android:id="@+id/alarmRuleAlarmTimeNoRingtone"
                    android:entries="@array/alarmRuleAlarmTimeNoRingtoneEntries" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
