<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        style="@style/mainLinear">

    <LinearLayout style="@style/titleBar" android:id="@+id/titleBar">
        <Button
                style="@style/titleBarButton"
                android:id="@+id/titleBarBackButton"
                android:visibility="invisible"
                android:text="@string/titleBarBackButton" />
        <TextView
                style="@style/titleBarText"
                android:id="@+id/titleBarText"
                android:text="@string/appName" />
        <Button
                style="@style/titleBarButton"
                android:id="@+id/titleBarEditButton"
                android:visibility="invisible"
                android:text="@string/titleBarEditButton" />
    </LinearLayout>

    <ListView style="@style/mainListBody" android:id="@android:id/list" />
    <TextView
            style="@style/mainListEmptyText"
            android:id="@android:id/empty"
            android:text="@string/loading" />

    <LinearLayout style="@style/toolBar" android:id="@+id/toolBar">
        <Button
                style="@style/toolBarButtonSelected"
                android:id="@+id/scheduleButton"
                android:text="@string/scheduleButton" />
        <Button
                style="@style/toolBarButton"
                android:id="@+id/alarmRuleButton"
                android:text="@string/alarmRuleButton" />
        <Button
                style="@style/toolBarMenuButton"
                android:id="@+id/optionsMenuButton"
                android:text="@string/optionsMenuButton" />
    </LinearLayout>

</LinearLayout>
