<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        style="@style/mainLinear">

    <LinearLayout style="@style/titleBar" android:id="@+id/titleBar">
        <Button
                style="@style/titleBarButton"
                android:id="@+id/titleBarBackButton"
                android:visibility="visible"
                android:text="@string/titleBarBackButton" />
        <TextView
                style="@style/titleBarText"
                android:id="@+id/titleBarText"
                android:text="@string/workdayViewTitle" />
        <Button
                style="@style/titleBarButton"
                android:id="@+id/titleBarEditButton"
                android:visibility="visible"
                android:text="@string/titleBarEditButton" />
    </LinearLayout>

    <ScrollView style="@style/mainContent">
        <LinearLayout style="@style/mainContentLinear">
            <TextView
                    style="@style/contentLabel"
                    android:text="@string/workdayNameLabel" />
            <TextView
                    style="@style/contentTextView"
                    android:id="@+id/workdayName"
                    android:hint="@string/workdayNameDefault" />
            <TextView
                    style="@style/contentLabel"
                    android:text="@string/workdayDateRuleLabel" />
            <com.isjfk.android.rac.widget.DateRuleListViewer
                    style="@style/contentList"
                    android:id="@+id/dateRuleListViewer" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
